feat: integrate Supabase authentication and user session management
- Added environment variable for site URL in .env.example
- Updated package dependencies for Supabase authentication UI
- Created manifest.json for PWA support
- Implemented server-side Supabase client creation in API routes
- Added Apple icon and general icon for the application
- Created authentication callback route for handling OAuth redirects
- Developed login page with Supabase authentication UI
- Established layout structure with header and authentication context
- Implemented header component with user session management
- Created custom hook for managing projects with user authentication
- Developed authentication context for managing user state
- Created browser and server Supabase client utilities
- Implemented middleware for protecting routes and managing sessions
- Updated Supabase configuration for OAuth and redirect URLs
- Added migration script for assigning placeholder projects to the first admin user

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -61,7 +61,8 @@
   "portsAttributes": {
     "3000": {
       "label": "Next.js Dev Server",
-      "onAutoForward": "notify"
+      "onAutoForward": "notify",
+      "protocol": "http"
     },
     "54321": {
       "label": "Supabase API",
