--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@
 NEXT_PUBLIC_SUPABASE_URL=https://your-project-ref.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
 
+# Site URL (for auth redirects)
+# Local development: http://localhost:3000 (or your dev port)
+# Production: https://your-domain.com
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
 # Supabase Service Role Key (needed for Edge Functions)
 # ⚠️ KEEP THIS SECRET! Never commit this to git or expose it client-side
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
